--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/mapped-types": "^2.0.3",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/typeorm": "^10.0.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
